--- a/sass/partials/_sidebar.scss
+++ b/sass/partials/_sidebar.scss
@@ -384,9 +384,8 @@
 
     li {
       display: block;
-      padding: 10px 0;
+      padding: 12px 0;
       border-bottom: 1px solid $gray-300;
-      padding: 8px 0;
       &:first-child {
         padding-top: 0;
       }
