--- a/sass/partials/_theme-default.scss
+++ b/sass/partials/_theme-default.scss
@@ -316,8 +316,9 @@ input.theme-btn{
     background-color: $brand;
       &:after{
         color: $white;
+        @include transition;
       }
-  }
+    }
 }
 
 .wp-block-loginout {
